--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -25,7 +25,7 @@ autorestart = true
 
 
 [program: redis-queue-monitor]
-command = rq-dashboard
+command = rq-dashboard -u %(ENV_REDIS_URL)s
 directory = .
 autostart = true
 stdout_logfile = ./logs/monitor.log
