pagination added and queries moved to differt file

--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -14,7 +14,7 @@ logfile_backups=10           ; (num of main logfile rotation backups;default 10)
 command = python3 consumer.py
 directory = .
 autostart = true
-numprocs = %(ENV_WORKERS_COUNT)s
+numprocs = 1                 ;%(ENV_WORKERS_COUNT)s ; the number of worker processes for this program can be added as an environment variable
 process_name = %(program_name)s_%(process_num)02d
 stdout_logfile = ./logs/%(program_name)s_%(process_num)02d.log
 stderr_logfile = ./logs/%(program_name)s_%(process_num)02d.log
@@ -24,13 +24,13 @@ autorestart = true
 
 
 
-[program: redis-queue-monitor]
-command = rq-dashboard -u %(ENV_REDIS_URL)s
-directory = .
-autostart = true
-stdout_logfile = ./logs/monitor.log
-stderr_logfile = ./logs/monitor.log
-logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
-logfile_backups=10           ; (num of main logfile rotation backups;default 10)
-autorestart = true
+# [program: redis-queue-monitor]
+# command = rq-dashboard -u %(ENV_REDIS_URL)s
+# directory = .
+# autostart = true
+# stdout_logfile = ./logs/monitor.log
+# stderr_logfile = ./logs/monitor.log
+# logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
+# logfile_backups=10           ; (num of main logfile rotation backups;default 10)
+# autorestart = true
 
