--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   fastapi:
     build:
@@ -52,14 +50,12 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - redis
-      - fastapi
       - elasticsearch
-    ports:
-      - "9181:9181"
+    # ports:
+    #   - "9181:9181"  # Uncomment this line if you want to expose the port for rq-dashboard
     environment:
       - REDIS_URL=redis://redis:6379
       - ELASTICSEARCH_URL=http://elasticsearch:9200
-      - WORKERS_COUNT=1
       - QUEUE=blog_processing_queue
     command: supervisord -c supervisord.conf
     healthcheck:
