--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -7,8 +7,8 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisord]
 logfile=./logs/supervisord.log
-logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
-logfile_backups=10           ; (num of main logfile rotation backups;default 10)
+logfile_maxbytes=50MB
+logfile_backups=10
 
 [program: redis-queue-consumer]
 command = python3 consumer.py
@@ -18,8 +18,8 @@ numprocs = 1                 ;%(ENV_WORKERS_COUNT)s ; the number of worker proce
 process_name = %(program_name)s_%(process_num)02d
 stdout_logfile = ./logs/%(program_name)s_%(process_num)02d.log
 stderr_logfile = ./logs/%(program_name)s_%(process_num)02d.log
-logfile_maxbytes=50MB        ; (max main logfile bytes b4 rotation;default 50MB)
-logfile_backups=10           ; (num of main logfile rotation backups;default 10)
+logfile_maxbytes=50MB       
+logfile_backups=10
 autorestart = true
 
 
