redis connection error handled

--- a/app/supervisord.conf
+++ b/app/supervisord.conf
@@ -13,7 +13,6 @@ logfile_backups=10
 [program: redis-queue-consumer]
 command = python3 consumer.py
 directory = .
-autostart = true
 numprocs = 1                 ;%(ENV_WORKERS_COUNT)s ; the number of worker processes for this program can be added as an environment variable
 process_name = %(program_name)s_%(process_num)02d
 stdout_logfile = ./logs/%(program_name)s_%(process_num)02d.log
@@ -21,6 +20,7 @@ stderr_logfile = ./logs/%(program_name)s_%(process_num)02d.log
 logfile_maxbytes=50MB       
 logfile_backups=10
 autorestart = true
+restartsecs = 10
 
 
 
